# lenses

./: .gitignore  docker-compose.yaml  index.html  manifest.json  package.json  tsconfig.json
.github/workflows/: image_build.yaml
api/: .dockerignore  .gitignore  Dockerfile  example.env  main.py  pyproject.toml  requirements.txt
api/models/: db_models.py  insights.py
api/utils/: db_config.py  output.txt  process_csv.py  string_utils.py
api/utils/data/: Boundaries_-_Community_Areas_20250518.csv:Zone.Identifier  Crimes_-_2001_to_Present_20250518.csv:Zone.Identifier
public/: background.js  manifest.json  script.css
public/scripts/: content.js
src/: App.tsx  index.css
src/components/: PriceCard.tsx
