[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "dotenv>=0.9.9",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.12",
    "greenlet==3.2.2",
    "idna==3.10",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "requests>=2.32.3",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "sqlmodel==0.0.24",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
]
